Fixed line showing a page is active hiding the text on high contrast mode

--- a/src/styles/component/layout/header.module.scss
+++ b/src/styles/component/layout/header.module.scss
@@ -72,7 +72,7 @@
     opacity: 1;
   }
   .activeHeaderMenuItem:after {
-    background-color: var(--background-color);
+    opacity: 0;
   }
   .header.expandedHeader {
     background-color: var(--primary-color);
